sandbox/output
Prescription.java:2: error: cannot find symbol
    public Prescription(LocalDate dispenseDate, int daysSupply, 
                        ^
  symbol:   class LocalDate
  location: class Prescription
MedicineClashTest.java:36: error: constructor Medicine in class Medicine cannot be applied to given types;
        medicines.add(new Medicine("Codeine", prescriptions));
                      ^
  required: no arguments
  found: String,Set<Prescription>
  reason: actual and formal argument lists differ in length
2 errors
